--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width, user-scalable=no"
     />
-    <link href="/src/app/providers/index.css" rel="stylesheet" />
+    <link href="/src/app/styles/index.css" rel="stylesheet" />
     <title>Lyaguh template</title>
   </head>
   <body>
