--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="minimum-scale=1, initial-scale=1, width=device-width, user-scalable=no"
     />
     <link href="/src/app/styles/index.css" rel="stylesheet" />
-    <title>Lyaguh template</title>
+    <title>АгроХаб</title>
   </head>
   <body>
     <div id="root"></div>
